# blocker

./: Cargo.toml  LICENCE  Readme  Readme.md
src/: blocker.rs  hosts_manager.rs  main.rs
