[package]
name = "sites_block"
version = "0.1.0"
edition = "2021"


[dependencies]
nix = { version = "0.29.0", optional = true, features = ["user"] }
winapi = { version = "0.3", features = ["winnt", "processthreadsapi", "securitybaseapi"], optional = true }

[features]
default = []
unix = ["nix"]
windows = ["winapi"]
